<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_secondary"
        android:columnCount="2"
        android:useDefaultMargins="true"
        android:verticalSpacing="10dp">

        <TextView
            android:id="@+id/read_articles_counter"
            style="@style/p_bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:background="@color/primaryVariant"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/general_btn"
            style="@style/btn_clean"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/primary"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/general"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/business_btn"
            style="@style/btn_clean"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/primary"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/business"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/entertainment_btn"
            style="@style/btn_clean"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/primary"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/entertainment"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/health_btn"
            style="@style/btn_clean"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/primary"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/health"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/science_btn"
            style="@style/btn_clean"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/primary"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/science"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sports_btn"
            style="@style/btn_clean"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/primary"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/sports"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/technology_btn"
            style="@style/btn_clean"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/primary"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/technology"
            android:textColor="@color/white" />

    </GridLayout>

</layout>